--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,4 @@ envlist = py2, py3
 
 [testenv]
 deps= -rdev-requirements.txt
-commands=pytest integration_tests -vv -s --pdb
+commands=pytest -vv -s tests
