Update to 1.7 release

--- a/tox.ini
+++ b/tox.ini
@@ -4,3 +4,8 @@ envlist = py2, py3
 [testenv]
 deps= -rdev-requirements.txt
 commands=pytest -vv -s tests
+
+
+[testenv:integration_tests]
+deps= -rdev-requirements.txt
+commands=pytest -n 4 -vv -s integration_tests
